login/login.css
*{
	--text-color: #3B3023;
	--primary-color: #A0E7F0;
	font-family: "Plus Jakarta Sans",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
html[data-theme="dark"]{
	--background-color: #222830;
	--main-container: rgb(23, 32, 47);
	--eye: white;
	--text-color: white;
	--box-shadow-main: 0 0 25px rgba(66, 153, 225, 0.4);
	--right-ul-li: white;
	--right-nav: rgb(23, 32, 47);
	--right-ul-li-hover: rgba(81, 80, 81);
	--close-color: white;
}
html[data-theme="light"]{
	--background-color: rgb(245, 240, 230);
	--main-container: rgb(255, 250, 245);
	--box-shadow-main: 0 0 30px rgba(255, 235, 200, 0.6),0 0 10px rgba(255, 235, 200, 0.4);
	--right-ul-li: rgb(74, 58, 41);
	--right-nav: rgb(255, 250, 245);
	--right-ul-li-hover: rgb(235, 230, 220);
	--close-color: black;

}
body{
	position:relative;
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background: var(--background-color);
	min-height:100vh;
	margin:0;
	overflow-x:hidden;
}
.main-container{
	position:relative;
	display: flex;
	border-radius: 25px;
	max-width: 1000px;
	width: 100%;
	min-height: 700px;
	height: auto;
	margin: 50px;
	opacity: 0.9;
	box-shadow: var(--box-shadow-main);
}
.left-container{
	display:flex;
	position: relative;
	flex: 1;
	flex-direction: column;
}
.left-container > img {
	height: 100%;
	width: 100%;
	border-top-left-radius: 25px;
	border-bottom-left-radius: 25px;
}
.title{
	position: absolute;
	top: 10px;
	left: 170px;
	font-weight: bold;
	font-size: 40px;
	font-family: "Kode Mono";
}
.right-container{
	flex:1;
	padding: 25px;
	display:flex;
	background-color: var(--main-container);
	flex-direction: column;
	position: relative;
	align-items: center;
	border-top-right-radius: 25px;
	border-bottom-right-radius: 25px;

}
.logo-text{
	font-family: "Pacifico","Plus Jakarta Sans",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
	font-size: 30px;
	color: #43b1ca;
	margin-bottom: 70px;
	text-align:center;
}
#login{
	display:flex;
	flex-direction: column;
	gap: 20px;
}
.input-div{
	display: flex;
	position: relative;
	flex-direction: column;
	color: var(--text-color);
	gap: 5px;
}
.input-div > input{
	position:relative;
	height: 30px;
	padding: 10px 10px 3px 10px;
	background: transparent;
	border-style: none;
	border-bottom: 1px outset #e8cece4f;
	width: 350px;
	color: var(--text-color);
	transition: background 0.5s ease;
}
.input-div > input:focus {
	outline: none;
	background-color: rgba(73, 133, 224, 0.12);
}
.login-text{
	color: #7A8C99;
	font-size: 20px;
	word-spacing: 4px;
	margin:0;
	margin-bottom: 50px;
	text-align: center;
}
.vague{
	color: #7A8C99;
	letter-spacing: 0.5px;
}
.login-button{
	padding: 10px 20px;
	width: 165px;
	height: 50px;
	background-color: #8ADBEE;
	border-radius: 30px;
	border-style: none;
	color: var(--text-color);
	word-spacing: 2px;
	box-shadow: 0 4px 8px rgba(139, 107, 61, 0.35);
	align-self: center;
	transition: width 0.5s ease, background-color 0.5s ease;
}
.login-button:hover{
	cursor: pointer;
	width: 300px;
	background-color: #67AFD2;
}
.link{
	color:#5A7FA5;
	transition: transform 0.5s ease;
}
.link:hover{
	color: #3E6E9C;
	transform: translateX(10px);
}
.register{
	margin:0;
	font-size: 13px;
	margin-top:30px;
	text-align: center;
	transition: transform 0.5s ease;
}
.register:hover{
	transform: translateX(10px);
}
.register > a{
	margin-top: 20px;
}
.forgot{
	margin-top: 5px;
	align-self: flex-end;
	font-size: 15px;
	text-decoration: none;
}
label{
	font-size: 14px;
}
.error{
	display:none;
	background-color: #ff00002b;
	color: red;
	border-radius: 5px;
	padding: 10px;
	opacity:0;
	max-height:0px;
	transition: opacity 500ms ease-in;
}
.show{
	opacity: 1;
	max-height: 40px;
}
.wrong{
	border: 1px outset red !important;
	border-color: red !important;
}
.eye{
	position:absolute;
	top: 37px;
	right: 4px;
	color: var(--eye);
}
.eye:hover{
	cursor:pointer;
	animation: wobble 0.4s ease;
}
.register-modal{
	display:none;
	justify-content: center;
	align-items:center;
	background-color: rgba(0,0,0,0.4);
	z-index: 1;
	position: fixed;
	left: 0px;
	top: 0px;
	width:100%;
	height: 100%;
}
.register-form{
	position: relative;
	display:flex;
	flex-direction:column;
	align-items:center;
	gap: 30px;
	background-color: var(--main-container);
	padding: 50px;
	border-radius: 105px;
	min-width: 0;
	transform:scale(0);
	transition: 0.5s;
}
.active{
	transform:scale(1);
}
.margin-top{
	margin-top: 30px;
}
.register-text{
	display:flex;
	align-items: center;
}
.register_input_div{
	flex-grow:0;
	max-width: 377px;
}
.register_input_div > p{
	margin: 0;
	word-break:break-word;
	overflow-wrap: break-word;
}
.register_error{
	display:none;
	align-items:flex-start;
	color:red;
}
.close{
	position: absolute;
	top: 53px;
	right: 40px;
	border-radius: 30px;
	cursor: pointer;
	color: var(--close-color);
}
.right-nav{
	position: fixed;
	top: 45%;
	right: -66px;
	height:fit-content;
	background-color: var(--right-nav);
	border-radius: 10px;
	transition: right 0.5s ease-out;
}
.right-nav:hover{
	right:-4px;
}
.right-ul{
	display:flex;
	flex-direction: column;
	margin: 0;
	padding: 10px;
	gap: 20px;
}
.right-ul > li{
	list-style-type: none;
}
.right-ul-li{
	display: flex;
	text-decoration:none;
	gap: 15px;
	align-items: center;
	padding: 5px;
	color: var(--right-ul-li);
}
.right-ul-li:hover{
	background-color:var(--right-ul-li-hover);
	border-radius: 10px;
}

@media screen and (max-width: 900px){
	.main-container{
		min-height:auto;
	}
	.left-container{
		display: none;
	}
	.right-container{
		flex-grow: 1 1 80%;
		width:100%;
	}
	.right-nav{
		top: auto;
		bottom: -45px;
		right: 50%;
		transform: translateX(50%);
		border-radius:20px;
		z-index:100;
	}
	.right-nav:hover{
		right:50%;
	}
	.right-ul-li{
		flex-direction:column;
	}
}
@media only screen and (max-width: 450px){
	input{
		width: 230px !important;
	}
	.register-form{
		flex: 1 1 100%;
	}
}
@keyframes wobble {
  0%   { transform: rotate(0deg); }
  40%  { transform: rotate(10deg); }
  70%  { transform: rotate(-10deg); }
  100% { transform: rotate(0deg); }
}

